# CalculatorLibrary

./: .gitignore  .python-version  README.md  calculator.py  pyproject.toml  requirements.txt  test_calculator.py
.circleci/: config.yml
.github/workflows/: main.yml
calculator/: pyvenv.cfg
