[tool.poetry]
name = "calculatorlibrary"
version = "0.1.0"
description = "A simple calculator application"
authors = ["Robert Portelli <github@robertportelli.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
iniconfig = "2.0.0"
mccabe = "0.7.0"
packaging = "23.1"
pluggy = "1.3.0"
pycodestyle = "2.11.0"
pyflakes = "3.1.0"
pytest = "7.4.2"
pytest-cov = "4.1.0"
tomli = {version = "2.0.1", python = "<3.11"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
